--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <div id="wrapper"><img id="logo" src ="images/logo.png"></div>
     <select id="grid-select" onchange="createGrids()">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -13,6 +14,7 @@
     </select>
 
     <button id="store-button" onclick="storeData()">Store</button>
+    
 
     <div id="grid-container">
     </div>
